# search_docs

./: .gitignore  LICENSE  exec.ps1  pyproject.toml  requirements.txt  sample_settings.yaml  settings.yaml
input/: keyword.txt  keywords.txt
scripts/: env.ps1  exec.ps1
search_docs/: __main__.py  abstract_search_docs.py  base_search_excel.py  config.py  search_excel.py
search_docs/adaptors/: default_search_adapter.py
search_docs/factories/: factory.py
search_docs/interfaces/: __init__.py  abstract_search.py
search_docs/search_docs/: __init__.py  abstract_search_docs.py  default_search_excel.py
src/search_docs/: __main__.py  config.py
src/search_docs/adaptors/: __init__.py  default_search_adapter.py
src/search_docs/factories/: factory.py
src/search_docs/interfaces/: __init__.py  abstract_search_docs.py
src/search_docs/search_docs/: __init__.py  default_search_excel.py
